[package]
name = "send-reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
reqwest-retry = "0.1.3"
reqwest-middleware = "0.1.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3.19"
num_cpus = "1.13.1"
anyhow = "1.0.52"